--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
 </head>
 
 <body class="relative p-0 m-0 w-full overflow-x-hidden contain;">
-    <header id="header" class="relative p-0 w-full z-0 overflow-hidden">
-        <div class="absolute left-0 top-0 w-full z-10 bg-black/70">
+    <header class="
+        relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center
+        md:aspect-[834/740]
+        lg:aspect-[1440/795]
+    ">
+        <!-- <img src="./img/homepage.png" class="w-full aspect-[1440/795]" /> -->
+        <video autoplay muted loop width="auto" height="100%" class="h-full object-cover aspect-[1440/795] md:aspect-[834/740] lg:aspect-[1440/795] z-1">
+            <source src="./video/cover.mp4" type="video/mp4">
+        </video>
+
+        <div class="
+            absolute left-0 top-0 w-full z-10 bg-black/70 aspect-[375/718]
+            md:aspect-[834/740]
+            lg:aspect-[1440/795]
+        ">
             <div class="w-full flex flex-row items-center justify-center aspect-[10/1] bg-gradient-to-b from-lavalemenu/40">
                 <div class="w-[30%] flex items-end justify-end">
                     <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
@@ -45,7 +58,11 @@
                     </a>
                 </div>
             </div>
-            <div class="flex flex-col w-[88.89%] aspect-[256/131] m-auto align-center pt-36 items-center">
+            <div class="
+                flex flex-col w-full aspect-[375/648] px-4 m-auto align-center justify-center items-center
+                md:aspect-[834/600]
+                lg:aspect-[1280/655] lg:w-[88.89%]
+            ">
                 <h1 class="w-full text-center text-6xl text-white font-bold font-display mb-12 capitalize">
                     Tinh Hoa <br/> Đến Từng Giọt Rượu
                 </h1>
@@ -58,13 +75,13 @@
             </div>
         </div>
 
-        <!-- <img src="./img/homepage.png" class="w-full aspect-[1440/795]" /> -->
-        <video autoplay muted loop width="100%" height="auto" class="w-full object-cover aspect-[1440/795] z-1">
-            <source src="./video/cover.mp4" type="video/mp4">
-        </video>
-
-        <div class="absolute w-full left-0 bottom-[-2px] aspect-[1440/72] z-10">
-            <img src="./img/spliter.png" class="w-full scale-x-[-1] rotate-180">
+        <div class="
+            absolute w-full bottom-[-2px] aspect-[375/72] z-10 
+            bg-center bg-no-repeat bg-cover bg-spliter rotate-180 scale-x-[-1]
+            border-0 p-0
+            md:aspect-[834/72]
+            lg:aspect-[1440/72]
+        ">
         </div>
     </header>
 
@@ -417,8 +434,14 @@
 
 
         <div class="relative w-full bg-lavaledark py-[5%]">
-            <div class="absolute aspect-[1440/72] top-[-1px] left-0">
-                <img src="./img/spliter.png" class="w-full scale-x-[-1]">
+            <div class="
+                absolute w-full aspect-[375/72] top-[-1px] left-0 
+                bg-center bg-no-repeat bg-cover bg-spliter scale-x-[-1]
+                border-0 p-0
+                md:aspect-[834/72]
+                lg:aspect-[1440/72]
+            ">
+                <!-- <img src="./img/spliter.png" class="w-full scale-x-[-1]"> -->
             </div>
             <div class="
                 flex flex-col w-[91.5%] mx-auto items-center align-center justify-center my-24
@@ -454,8 +477,13 @@
                     </button>
                 </div>
             </div>
-            <div class="absolute w-full aspect-[1440/72] bottom-[-1px] left-0">
-                <img src="./img/spliter.png" class="w-full scale-x-[-1] rotate-180">
+            <div class="
+                absolute w-full aspect-[375/72] bottom-[-1px] left-0 
+                bg-center bg-no-repeat bg-cover bg-spliter rotate-180 scale-x-[-1]
+                border-0 p-0
+                md:aspect-[834/72]
+                lg:aspect-[1440/72]
+            ">
             </div>
         </div>
 
@@ -565,11 +593,24 @@
     </section>
 
 
-    <footer class="relative flex flex-col bg-lavaledark w-full aspect-[1440/440] z-20 overflow-hidden">
-        <div class="top-[-1px] left-0 aspect-[1440/72]">
-            <img src="./img/spliter.png" class="w-full scale-x-[-1]">
+    <footer class="
+        relative flex flex-col bg-lavaledark w-full z-20 overflow-hidden aspect-[375/424]
+        md:aspect-[834/424]
+        lg:aspect-[1440/440]
+    ">
+        <div class="
+            absolute w-full aspect-[375/72] top-[-1px] left-0 
+            bg-center bg-no-repeat bg-cover bg-spliter scale-x-[-1]
+            border-0 p-0
+            md:aspect-[834/72]
+            lg:aspect-[1440/72]
+        ">
         </div>
-        <div class="flex flex-col w-[88.89%] aspect-[1280/316] mx-auto items-center align-center justify-center">
+        <div class="
+            flex flex-col w-full aspect-[375/372] mx-auto items-center align-center justify-center
+            md:aspect-[834/372]
+            lg:aspect-[1280/316] lg:w-[88.89%]
+        ">
             <img src="./img/logo.png" class="w-[9%]">
             <div class="flex flex-row h-fit mb-4">
                 <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer">Trang chủ</div>
