--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         lg:aspect-[1440/795]
     ">
         <!-- <img src="./img/homepage.png" class="w-full aspect-[1440/795]" /> -->
-        <video autoplay muted loop width="auto" height="100%" class="h-full object-cover aspect-[1440/795] md:aspect-[834/740] lg:aspect-[1440/795] z-1">
+        <video autoplay muted loop width="auto" playsinline height="100%" class="h-full object-cover aspect-[1440/795] md:aspect-[834/740] lg:aspect-[1440/795] z-1">
             <source src="./video/cover.mp4" type="video/mp4">
         </video>
 
