--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             md:aspect-[834/740]
             lg:aspect-[1440/795]
         ">
-            <div class="w-full flex flex-row items-center justify-center aspect-[10/1] bg-gradient-to-b from-lavalemenu/40">
+            <div class="
+                w-full flex-row items-center hidden justify-center bg-gradient-to-b from-lavalemenu/40
+                md:flex md:aspect-[834/140]
+                lg:aspect-[1440/140]
+            ">
                 <div class="w-[30%] flex items-end justify-end">
                     <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
                         Trang Chủ
@@ -56,6 +60,16 @@
                         class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Liên hệ
                     </a>
+                </div>
+            </div>
+            <div class="
+                relative w-full flex-row items-center flex justify-center align-center aspect-[375/70] bg-gradient-to-b from-lavalemenu/40
+                md:hidden
+            ">
+                <!-- <img src="./img/logo1.png" class="h-full"> -->
+                <div class="bg-center bg-no-repeat bg-cover bg-logo h-full aspect-[94.35/70]"></div>
+                <div class="absolute h-full top-0 right-0 flex items-center flex-col justify-center pr-8">
+                    <img src="./img/menu.svg" class="h-[23%] float-right">
                 </div>
             </div>
             <div class="
