--- a/index.html
+++ b/index.html
@@ -507,7 +507,10 @@
                 flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24
                 md:px-[9%] md:py-[7%] md:my-0
             ">
-                <img src="./img/advice.png" class="w-[30%] mb-4">
+                <img src="./img/advice.png" class="
+                    w-[81%] mb-4
+                    md:w-[32%]
+                ">
                 <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Tư Vấn</h1>
                 <span class="block w-full text-xl text-center text-white/60 font-medium font-monsterrat mb-12 ">
                     Cùng Lavale tìm hiểu thêm về các tác dụng của rượu và rượu thuốc truyền thống
