--- a/index.html
+++ b/index.html
@@ -101,19 +101,10 @@
 
 
     <section class="relative bg-lavale w-full h-fit overflow-hidden">
-        <div class="absolute top-0 left-0">
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
-            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+        <div class="w-full h-full absolute top-0 left-0 bg-middleground bg-repeat-y opacity-30 z-8">
         </div>
 
-        <div class="w-full bg-transparent">
+        <div class="w-full bg-transparent z-9">
             <div class="                
                 flex flex-col w-[91.5%] mx-auto items-center align-center justify-center 
                 md:w-[92.3%]
@@ -381,9 +372,9 @@
         <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
 
 
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="
-                flex flex-col w-[91.5%] mx-auto items-center align-center justify-center
+                flex flex-col w-[91.5%] mx-auto items-center align-center justify-center z-10
                 md:w-[92.3%] md:pb-[14%]
                 lg:w-[88.89%] lg:px-[9%] lg:pb-[7%]
             ">
@@ -397,7 +388,7 @@
                     grid grid-rows-3 gap-4 w-full
                     md:grid-cols-3 md:grid-rows-1
                 ">
-                    <div class="w-full">
+                    <div class="w-full z-10">
                         <div class="
                             relative w-full aspect-[343/320] flex items-center justify-center align-center bg-ruouman rounded-md bg-no-repeat bg-center bg-cover
                             md:aspect-[333/480]
@@ -412,7 +403,7 @@
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
                         <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
                     </div>
-                    <div class="w-full">
+                    <div class="w-full z-10">
                         <div class="
                             relative w-full aspect-[343/320] flex items-center justify-center align-center bg-ruoutaomeo rounded-md bg-no-repeat bg-center bg-cover
                             md:aspect-[333/480]
@@ -427,7 +418,7 @@
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ</span>
                         <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
                     </div>
-                    <div class="w-full">
+                    <div class="w-full z-10">
                         <div class="
                             relative w-full aspect-[343/320] flex items-center justify-center align-center bg-ruouvai rounded-md bg-no-repeat bg-center bg-cover
                             md:aspect-[333/480]
@@ -502,9 +493,9 @@
         </div>
 
 
-        <div class="w-full bg-transparent">
+        <div class="w-full bg-transparent z-9">
             <div class="
-                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24
+                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
                 md:px-[9%] md:py-[7%] md:my-0
             ">
                 <img src="./img/advice.png" class="
@@ -517,7 +508,7 @@
                 </span>
                 <div class="flex flex-col w-full justify-between items-center align-center space-y-4">
                     <div class="
-                        grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center
+                        grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center z-10
                         md:grid-cols-2 md:grid-rows-1
                     ">
                         <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
@@ -560,7 +551,7 @@
                         </div>
                     </div>
                     <div class="
-                        grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center
+                        grid grid-cols-1 grid-rows-2 gap-3 w-full justify-between items-center align-center z-10
                         md:grid-cols-2 md:grid-rows-1
                     ">
                         <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
