--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <script src="./js/menu.responsive.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/tailwind.config.js" type="module"></script>
     <title>Lavale</title>
 </head>
 
-<body class="relative p-0 m-0 w-full overflow-x-hidden contain;">
+<body class="relative p-0 m-0 w-full h-full overflow-x-hidden contain">
     <header class="
-        relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center
+        relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center z-2
         md:aspect-[834/740]
         lg:aspect-[1440/795]
     ">
@@ -32,7 +34,7 @@
         </video>
 
         <div class="
-            absolute left-0 top-0 w-full z-10 bg-black/70 aspect-[375/718]
+            absolute left-0 top-0 w-full z-8 bg-black/70 aspect-[375/718]
             md:aspect-[834/740]
             lg:aspect-[1440/795]
         ">
@@ -40,7 +42,7 @@
                 w-full flex-row items-center hidden justify-center bg-gradient-to-b from-lavalemenu/40
                 md:flex md:aspect-[834/140]
                 lg:aspect-[1440/140]
-            ">
+            " data-menu="full-menu">
                 <div class="w-[30%] flex items-end justify-end">
                     <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
                         Trang Chủ
@@ -65,10 +67,12 @@
             <div class="
                 relative w-full flex-row items-center flex justify-center align-center aspect-[375/70] bg-gradient-to-b from-lavalemenu/40
                 md:hidden
-            ">
+            " data-menu="simple-menu-show">
                 <!-- <img src="./img/logo1.png" class="h-full"> -->
                 <div class="bg-center bg-no-repeat bg-cover bg-logo h-full aspect-[94.35/70]"></div>
-                <div class="absolute h-full top-0 right-0 flex items-center flex-col justify-center pr-8">
+                <div class="absolute h-full top-0 right-0 flex items-center flex-col justify-center pr-8"
+                    data-menu="toggle-open"
+                >
                     <img src="./img/menu.svg" class="h-[23%] float-right">
                 </div>
             </div>
@@ -90,7 +94,35 @@
         </div>
 
         <div class="
-            absolute w-full bottom-[-2px] aspect-[375/72] z-10 
+            absolute left-0 top-0 z-10
+            h-full bg-lavale
+            aspect-[375/718]
+            hidden
+        " data-menu="simple-menu-popup">
+            <div class="relative w-full h-full">
+                <div class="
+                    absolute left-0 top-0 w-full z-10 bg-black/70 aspect-[375/718]
+                    md:aspect-[834/740]
+                    lg:aspect-[1440/795]
+                ">
+                    <div class="
+                        relative w-full flex-row items-center flex justify-center align-center aspect-[375/70] bg-gradient-to-b from-lavalemenu/40
+                        md:hidden
+                    ">
+                        <!-- <img src="./img/logo1.png" class="h-full"> -->
+                        <div class="bg-center bg-no-repeat bg-cover bg-logo h-full aspect-[94.35/70]"></div>
+                        <div class="absolute h-full top-0 right-0 flex items-center flex-col justify-center pr-8"
+                            data-menu="toggle-close"
+                        >
+                            <img src="./img/menu.svg" class="h-[23%] float-right">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="
+            absolute w-full bottom-[-2px] aspect-[375/72] z-9
             bg-center bg-no-repeat bg-cover bg-spliter rotate-180 scale-x-[-1]
             border-0 p-0
             md:aspect-[834/72]
@@ -100,7 +132,7 @@
     </header>
 
 
-    <section class="relative bg-lavale w-full h-fit overflow-hidden">
+    <section class="relative bg-lavale w-full h-fit overflow-hidden z-1">
         <div class="w-full h-full absolute top-0 left-0 bg-middleground bg-repeat-y opacity-30 z-8">
         </div>
 
@@ -643,6 +675,10 @@
 
 <script>
     AOS.init();
+</script>
+
+<script>
+    MenuResponsive.init();
 </script>
 
 </html>
