--- a/products.html
+++ b/products.html
@@ -133,7 +133,47 @@
 
 
     <section class="relative bg-lavale w-full h-fit overflow-hidden z-1">
-        
+        <div class="w-full bg-transparent z-9">
+            <div class="
+                flex flex-col w-[91.5%] mx-auto items-center align-center justify-center 
+                md:flex-row md:w-[92.3%] lg:aspect-[770/560]
+                lg:w-[88.89%] lg:aspect-[1280/640]
+            ">
+                <div class="
+                    flex flex-row m-auto
+                    lg:w-[83%] lg:aspect-[1062/640]
+                ">
+                    <div class="
+                        lg:w-[38%] lg:aspect-[405/640]
+                    ">
+                        <img src="./img/ruouman.png">
+                    </div>
+                    <div class="
+                        flex flex-col justify-center
+                        lg:w-[62%] lg:aspect-[657/640]
+                    ">
+                        <h1 class="text-left">Lavale Mận</h1>
+                        <span class="block text-left">
+                            Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất lượng cao của rượu trái cây từ vùng núi phía Bắc.
+                        </span>
+                        <span class="block text-left">
+                            345.000 ₫
+                        </span>
+                        <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">
+                            Liên hệ Lavale
+                        </button>
+                        <span>
+
+                        </span>
+                        <div class="flex flex-row">
+                            <img src="./img/facebook.svg">
+                            <img src="./img/instagram.svg">
+                        </div>
+                    </div>
+                </div>
+            </div>   
+        </div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/56]"></div>
     </section>
 
 
