--- a/products.html
+++ b/products.html
@@ -24,17 +24,15 @@
 
 <body class="relative p-0 m-0 w-full h-full overflow-x-hidden contain">
     <header class="
-        relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center z-2
+        relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center z-2 
+        bg-cover bg-center bg-no-repeat bg-cover
         md:aspect-[834/740]
         lg:aspect-[1440/795]
     ">
-        <!-- <img src="./img/homepage.png" class="w-full aspect-[1440/795]" /> -->
-        <video autoplay muted loop width="auto" playsinline height="100%" class="h-full object-cover aspect-[1440/795] md:aspect-[834/740] lg:aspect-[1440/795] z-1">
-            <source src="./video/cover.mp4" type="video/mp4">
-        </video>
+        <!-- <img src="./img/cover.jfif" class="h-full aspect-[427/640]" /> -->
 
         <div class="
-            absolute left-0 top-0 w-full z-8 bg-black/70 aspect-[375/718]
+            absolute left-0 top-0 w-full z-8 bg-black/30 aspect-[375/718]
             md:aspect-[834/740]
             lg:aspect-[1440/795]
         ">
@@ -82,14 +80,11 @@
                 lg:aspect-[1280/655] lg:w-[88.89%]
             ">
                 <h1 class="w-full text-center text-6xl text-white font-bold font-display mb-12 capitalize">
-                    Tinh Hoa <br/> Đến Từng Giọt Rượu
+                    Rượu Lavale
                 </h1>
                 <span class="block w-full text-xl text-center text-white leading-8 font-monsterrat font-medium">
-                    Tự hào là dòng rượu cao cấp đầu tiên cho phụ nữ <br/> được mang đến bạn bởi những người đam mê rượu 
+                    Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm <br> không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất <br> lượng cao của rượu trái cây từ vùng núi phía Bắc.
                 </span>
-                <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">
-                    Các sản phẩm của Lavale
-                </button>
             </div>
         </div>
 
