--- a/blogs.html
+++ b/blogs.html
@@ -115,11 +115,11 @@
                     29.12.1964
                 </span>
                 <div class="w-full">
-                    <span class="
+                    <p class="
                         block px-[17%] text-left font-monsterrat font-[15px] leading-[24px] text-white
                     ">
                         Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
-                    </span>
+                    </p>
                     <div class="
                         relative w-full aspect-[311/480] flex items-center justify-center align-center bg-[url('./img/timeline1.jfif')] rounded-md bg-no-repeat bg-center bg-cover
                         md:aspect-[770/480]
@@ -130,16 +130,16 @@
                         <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
                         <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
                     </div>
-                    <span class="
+                    <p class="
                         block px-[17%] text-left font-monsterrat font-[15px] leading-[24px] text-white
                     ">
                         Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
-                    </span>
-                    <span class="
+                    </p>
+                    <p class="
                         block px-[17%] text-left font-monsterrat font-[15px] leading-[24px] text-white
                     ">
                         Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
-                    </span>
+                    </p>
                 </div>
             </div>
         </div>
