--- a/introduction.html
+++ b/introduction.html
@@ -25,7 +25,7 @@
 <body class="relative p-0 m-0 w-full h-full overflow-x-hidden contain">
     <header class="
         relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center z-2 
-        bg-cover bg-center bg-no-repeat bg-cover
+        bg-[url('./img/cover.jfif')] bg-center bg-no-repeat bg-cover
         md:aspect-[834/740]
         lg:aspect-[1440/795]
     ">
