--- a/contact.html
+++ b/contact.html
@@ -156,17 +156,67 @@
             <div class="
                 flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
                 md:my-[88px]
+                lg:aspect-[1280/480]
             ">
-                <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Để lại lời nhắn</h1>
-
                 <div class="
-                    flex flex-row justify-center items-center align-center
-                    lg:w-full lg:aspect-[1280/280]
+                    flex flex-col align-center
+                    lg:h-full lg:aspect-[843/480]
                 ">
-                    
+                    <h1 class="w-full text-center text-5xl text-white font-display mb-[24px] capitalize">Để lại lời nhắn</h1>
+                    <div class="w-full aspect-[843/392] mb-[24px]">
+                        <div class="w-full container flex flex-row justify-between gap-6">
+                            <div class="flex-1 flex flex-col">
+                                <span class="block">Địa chỉ Email</span>
+                                <input placeholder="Thông tin liên lạc của quý khách" class="
+                                    w-full bg-lavale/10 text-white border-[3px] border-white/30
+                                    mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                    hover:bg-white/10 hover:border-[#feefc0]
+                                    focus:bg-white/10 focus:border-[#feefc0]
+                                    text-lg
+                                    placeholder-white
+                                ">
+                            </div>
+                            <div class="flex-1 flex flex-col">
+                                <span class="block">Họ và Tên</span>
+                                <input placeholder="Danh xưng của quý khách" class="
+                                    w-full bg-lavale/10 text-white border-[3px] border-white/30
+                                    mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                    hover:bg-white/10 hover:border-[#feefc0]
+                                    focus:bg-white/10 focus:border-[#feefc0]
+                                    text-lg
+                                    placeholder-white
+                                ">
+                            </div>
+                        </div>
+                        <div class="w-full">
+                            <span class="block">Tiêu đề</span>
+                            <input placeholder="Vấn đề cần liên hệ" class="
+                                w-full bg-lavale/10 text-white border-[3px] border-white/30
+                                mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                hover:bg-white/10 hover:border-[#feefc0]
+                                focus:bg-white/10 focus:border-[#feefc0] 
+                                text-lg
+                                placeholder-white
+                            ">
+                        </div>
+                        <div class="w-full">
+                            <span class="block">Tiêu đề</span>
+                            <textarea placeholder="Vấn đề cần liên hệ" class="
+                                w-full bg-lavale/10 text-white border-[3px] border-white/30
+                                mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                hover:bg-white/10 hover:border-[#feefc0]
+                                focus:bg-white/10 focus:border-[#feefc0]
+                                text-lg
+                                placeholder-white
+                            "></textarea>
+                        </div>
+                    </div>
+                    <button class="
+                        w-full transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg
+                    ">
+                        Gửi lời nhắn
+                    </button>
                 </div>
-
-            
             </div>
             <div class="
                 w-full aspect-[375/72] bottom-[-1px] left-0 
@@ -183,11 +233,19 @@
             <div class="
                 flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
                 md:my-[88px]
+                lg:aspect-[1280/480]
             ">
-                <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Hình Thành</h1>
-                <span class="block w-full text-xl text-center text-white/60 font-medium font-monsterrat mb-12 ">
-                    Lavale mang lại sự hưng phấn tự tại, niềm vui, sự thân mật và sảng khoái nhưng không với cái giá của đau đầu, mệt mỏi, khát nước của ngày mai tỉnh dậy.
-                </span>
+                <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Theo dõi Lavale</h1>
+                <div class="w-full flex flex-row align-center items-center justify-center">
+                    <img src="./img/facebook.svg">
+                    <img src="./img/instagram.svg">
+                </div>
+                <div class="w-full aspect-[1280/320] container flex flex-row justify-between gap-4">
+                    <div class="h-full aspect-[308/320]"></div>
+                    <div class="h-full aspect-[308/320]"></div>
+                    <div class="h-full aspect-[308/320]"></div>
+                    <div class="h-full aspect-[308/320]"></div>
+                </div>
             </div>
         </div>
 
