--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
 <body class="relative p-0 m-0 w-full h-full overflow-x-hidden contain">
     <header class="
         relative p-0 w-full z-0 overflow-hidden aspect-[375/718] flex items-center z-2 
-        bg-cover bg-center bg-no-repeat bg-cover
+        bg-[url('./img/cover.jfif')] bg-center bg-no-repeat bg-cover
         md:aspect-[834/740]
         lg:aspect-[1440/795]
     ">
@@ -141,27 +141,27 @@
                     <div class="
                         lg:w-[38%] lg:aspect-[405/640]
                     ">
-                        <img src="./img/ruouman.png">
+                        <img src="./img/ruouman.png" class="h-full w-auto">
                     </div>
                     <div class="
-                        flex flex-col justify-center
+                        flex flex-col justify-center pl-[64px]
                         lg:w-[62%] lg:aspect-[657/640]
                     ">
-                        <h1 class="text-left">Lavale Mận</h1>
-                        <span class="block text-left">
+                        <h1 class="text-left font-display font-semibold text-[64px] leading-[88px] text-white mb-[8px]">Lavale Mận</h1>
+                        <span class="block text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[24px]">
                             Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất lượng cao của rượu trái cây từ vùng núi phía Bắc.
                         </span>
-                        <span class="block text-left">
+                        <span class="block text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
                             345.000 ₫
                         </span>
-                        <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">
+                        <button class="transparent text-white border-[2px] w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px]">
                             Liên hệ Lavale
                         </button>
-                        <span>
-
+                        <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
+                            Chia sẻ
                         </span>
                         <div class="flex flex-row">
-                            <img src="./img/facebook.svg">
+                            <img src="./img/facebook.svg" class="mr-[16px]">
                             <img src="./img/instagram.svg">
                         </div>
                     </div>
