--- a/products.html
+++ b/products.html
@@ -130,31 +130,131 @@
     <section class="relative bg-lavale w-full h-fit overflow-hidden z-1">
         <div class="w-full bg-transparent z-9">
             <div class="
-                flex flex-col w-[91.5%] mx-auto items-center align-center justify-center 
-                md:flex-row md:w-[92.3%] lg:aspect-[770/560]
+                flex flex-col w-[91.5%] mx-auto my-[88px] items-center align-center justify-center 
+                md:w-[92.3%] md:aspect-[770/560]
                 lg:w-[88.89%] lg:aspect-[1280/640]
             ">
                 <div class="
-                    flex flex-row m-auto
+                    flex flex-col m-auto w-full
+                    md:flex-row md:aspect-[770/560]
                     lg:w-[83%] lg:aspect-[1062/640]
                 ">
                     <div class="
+                        w-full
+                        flex justify-center align-center items-center
+                        md:w-[48%] md:aspect-[373/560]
                         lg:w-[38%] lg:aspect-[405/640]
                     ">
                         <img src="./img/ruouman.png" class="h-full w-auto">
                     </div>
                     <div class="
-                        flex flex-col justify-center pl-[64px]
-                        lg:w-[62%] lg:aspect-[657/640]
+                        flex flex-col justify-center w-full p-0
+                        md:w-[52%] md:aspect-[397/560] md:pl-[24px]
+                        lg:w-[62%] lg:aspect-[657/640] lg:pl-[64px]
                     ">
-                        <h1 class="text-left font-display font-semibold text-[64px] leading-[88px] text-white mb-[8px]">Lavale Mận</h1>
-                        <span class="block text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[24px]">
+                        <h1 class="
+                            text-left font-display font-semibold text-white w-full text-[48px]
+                            lg:text-[64px] lg:leading-[88px] mb-[8px]
+                        ">
+                            Lavale Mận
+                        </h1>
+                        <span class="block w-full text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[24px]">
                             Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất lượng cao của rượu trái cây từ vùng núi phía Bắc.
                         </span>
-                        <span class="block text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
+                        <span class="block w-full text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
                             345.000 ₫
                         </span>
-                        <button class="transparent text-white border-[2px] w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px]">
+                        <button class="transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]">
+                            Liên hệ Lavale
+                        </button>
+                        <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
+                            Chia sẻ
+                        </span>
+                        <div class="flex flex-row">
+                            <img src="./img/facebook.svg" class="mr-[16px]">
+                            <img src="./img/instagram.svg">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-full bg-transparent z-9 aspect-[1280/56]"></div>
+
+                <div class="
+                    flex flex-col m-auto w-full
+                    md:flex-row md:aspect-[770/560]
+                    lg:w-[83%] lg:aspect-[1062/640]
+                ">
+                    <div class="
+                        w-full
+                        flex justify-center align-center items-center
+                        md:w-[48%] md:aspect-[373/560]
+                        lg:w-[38%] lg:aspect-[405/640]
+                    ">
+                        <img src="./img/ruoutaomeo.png" class="h-full w-auto">
+                    </div>
+                    <div class="
+                        flex flex-col justify-center w-full p-0
+                        md:w-[52%] md:aspect-[397/560] md:pl-[24px]
+                        lg:w-[62%] lg:aspect-[657/640] lg:pl-[64px]
+                    ">
+                        <h1 class="
+                            text-left font-display font-semibold text-white w-full text-[48px]
+                            lg:text-[64px] lg:leading-[88px] mb-[8px]
+                        ">
+                            Lavale Táo Mèo
+                        </h1>
+                        <span class="block w-full text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[24px]">
+                            Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất lượng cao của rượu trái cây từ vùng núi phía Bắc.
+                        </span>
+                        <span class="block w-full text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
+                            345.000 ₫
+                        </span>
+                        <button class="transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]">
+                            Liên hệ Lavale
+                        </button>
+                        <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
+                            Chia sẻ
+                        </span>
+                        <div class="flex flex-row">
+                            <img src="./img/facebook.svg" class="mr-[16px]">
+                            <img src="./img/instagram.svg">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-full bg-transparent z-9 aspect-[1280/56]"></div>
+
+                <div class="
+                    flex flex-col m-auto w-full
+                    md:flex-row md:aspect-[770/560]
+                    lg:w-[83%] lg:aspect-[1062/640]
+                ">
+                    <div class="
+                        w-full
+                        flex justify-center align-center items-center
+                        md:w-[48%] md:aspect-[373/560]
+                        lg:w-[38%] lg:aspect-[405/640]
+                    ">
+                        <img src="./img/ruouvai.png" class="h-full w-auto">
+                    </div>
+                    <div class="
+                        flex flex-col justify-center w-full p-0
+                        md:w-[52%] md:aspect-[397/560] md:pl-[24px]
+                        lg:w-[62%] lg:aspect-[657/640] lg:pl-[64px]
+                    ">
+                        <h1 class="
+                            text-left font-display font-semibold text-white w-full text-[48px]
+                            lg:text-[64px] lg:leading-[88px] mb-[8px]
+                        ">
+                            Lavale Vải
+                        </h1>
+                        <span class="block w-full text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[24px]">
+                            Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất lượng cao của rượu trái cây từ vùng núi phía Bắc.
+                        </span>
+                        <span class="block w-full text-left font-monsterrat text-[32px] leading-[40px] text-white/[60%] mb-[32px]">
+                            345.000 ₫
+                        </span>
+                        <button class="transparent text-white border-[2px] w-full md:w-fit py-3 px-9 uppercase rounded-md leading-[24px] font-monsterrat font-semibold hover:bg-white/50 mb-[32px] text-[18px]">
                             Liên hệ Lavale
                         </button>
                         <span class="block uppercase text-left font-monsterrat text-[15px] leading-[24px] text-white/[60%] mb-[10px]">
@@ -168,7 +268,6 @@
                 </div>
             </div>   
         </div>
-        <div class="w-full bg-transparent z-9 aspect-[1440/56]"></div>
     </section>
 
 
