--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 lg:aspect-[1440/140]
             " data-menu="full-menu">
                 <div class="w-[30%] flex items-end justify-end">
-                    <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
+                    <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active" href="/">
                         Trang Chủ
                     </a>
-                    <a
+                    <a  href="/products.html"
                         class="h-6 leading-6 uppercase mr-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Sản phẩm
                     </a>
