--- a/products.html
+++ b/products.html
@@ -42,11 +42,11 @@
                 lg:aspect-[1440/140]
             " data-menu="full-menu">
                 <div class="w-[30%] flex items-end justify-end">
-                    <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
+                    <a class="h-6 leading-6 uppercase mr-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Trang Chủ
                     </a>
                     <a
-                        class="h-6 leading-6 uppercase mr-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
+                        class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
                         Sản phẩm
                     </a>
                 </div>
