--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 </div>
                 <img src="./img//logo.png" class="h-full">
                 <div class="w-[30%] flex">
-                    <a
+                    <a href="/introduction.html"
                         class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Giới thiệu
                     </a>
-                    <a
+                    <a href="/contact.html"
                         class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Liên hệ
                     </a>
