--- a/products.html
+++ b/products.html
@@ -42,22 +42,22 @@
                 lg:aspect-[1440/140]
             " data-menu="full-menu">
                 <div class="w-[30%] flex items-end justify-end">
-                    <a class="h-6 leading-6 uppercase mr-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
+                    <a class="h-6 leading-6 uppercase mr-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active" href="/">
                         Trang Chủ
                     </a>
                     <a
-                        class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
+                        class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active" href="/products.html">
                         Sản phẩm
                     </a>
                 </div>
                 <img src="./img//logo.png" class="h-full">
                 <div class="w-[30%] flex">
                     <a
-                        class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
+                        class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active" href="/introduction.html">
                         Giới thiệu
                     </a>
                     <a
-                        class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
+                        class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active" href="/contact.html">
                         Liên hệ
                     </a>
                 </div>
