--- a/introduction.html
+++ b/introduction.html
@@ -177,39 +177,81 @@
             ">
             </div>
             <div class="
-                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
-                md:my-[88px]
+                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10 my-[88px]
             ">
-                <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Hình Thành</h1>
-                <span class="block w-full text-xl text-center text-white/60 font-medium font-monsterrat mb-12 ">
+                <h1 class="w-full text-center text-[48px] leading-[64px] text-white font-semibold font-display capitalize mb-[24px]">Hình Thành</h1>
+                <span class="block w-full text-[20px] leading-[32px] text-center text-white/60 font-medium font-monsterrat mb-[32px]">
                     Lavale mang lại sự hưng phấn tự tại, niềm vui, sự thân mật và sảng khoái nhưng không với cái giá của đau đầu, mệt mỏi, khát nước của ngày mai tỉnh dậy.
                 </span>
-                <img src="./img/start2.svg">
+
+                <img src="./img/start2.svg" class="mb-[32px]">
 
                 <div class="
                     flex flex-row justify-center items-center align-center
                     lg:w-full lg:aspect-[1280/280]
                 ">
-                    <div class="w-[50%] h-full font-display font-semibold text-5xl text-right text-white">
+                    <div class="w-[50%] h-full font-display font-semibold text-[48px] leading-[64px] text-right text-white pr-[56px]">
                         29.12.1964
                     </div>
-                    <div class="w-[6px] h-full bg-[#dddddd]/[86.67%] opacity-[86.67%] rounded-t-2xl"></div>
-                    <div class="w-[50%] h-full">
-                        <h1 class="capitalize w-full">Hương vị</h1>
-                        <span class="block w-full">
+                    <div class="w-[6px] h-full bg-[#dddddd]/[86.67%] opacity-[86.67%] rounded-2xl"></div>
+                    <div class="w-[50%] h-full pl-[56px]">
+                        <h1 class="capitalize w-full font-display font-semibold text-[48px] leading-[64px] text-white mb-[24px]">Hương vị</h1>
+                        <p class="block w-full font-monsterrat text-[15px] leading-[24px] text-white/60">
                             Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
-                        </span>
+                        </p>
                     </div>
                 </div>
 
                 <div class="
                     relative w-full aspect-[375/72] bg-lavaledark
                     flex justify-center align-center items-center
-                    border-0 p-0
+                    border-0 p-0 my-[32px]
                     md:aspect-[834/72]
                     lg:aspect-[1440/72]
                 ">
                     <img src="img/spliter-diamond.svg">
+                </div>
+
+                <div class="
+                    flex flex-row justify-center items-center align-center
+                    lg:w-full lg:aspect-[1280/280]
+                ">
+                    <div class="w-[50%] h-full pr-[56px]">
+                        <h1 class="capitalize w-full font-display font-semibold text-[48px] leading-[64px] text-white mb-[24px] text-right">Cốt rượu</h1>
+                        <p class="block w-full font-monsterrat text-[15px] leading-[24px] text-white/60 text-right">
+                            Để tạo nên hương vị, chúng tôi đi khắp các cao nguyên miền Bắc, rừng núi sâu xa để lựa chọn những trái cây chín mọng, to và đều nhất. Kết hợp với đơn vị sản xuất đường số 1 Việt Nam, chúng tôi đặt hàng tinh chế đường phèn loại 1 để cho hương vị ngọt thanh ko sắc. Tất cả thành phần sử dụng đều hoàn toàn tự nhiên 100%, không có bất kỳ hương liệu hoặc thành phần hóa học. Cuộc hôn nhân giữa hương vị và cốt rượu sau đó diễn ra thêm 1 năm nữa trong chum đất ko tráng men tạo nên sự hòa quyện giữa hương và tửu.
+                        </p>
+                    </div>
+                    <div class="w-[6px] h-full bg-[#dddddd]/[86.67%] opacity-[86.67%] rounded-2xl"></div>
+                    <div class="w-[50%] h-full font-display font-semibold text-[48px] leading-[64px] text-left text-white pl-[56px]">
+                        02.02.1965
+                    </div>
+                </div>
+
+                <div class="
+                    relative w-full aspect-[375/72] bg-lavaledark
+                    flex justify-center align-center items-center
+                    border-0 p-0 my-[32px]
+                    md:aspect-[834/72]
+                    lg:aspect-[1440/72]
+                ">
+                    <img src="img/spliter-diamond.svg">
+                </div>
+
+                <div class="
+                    flex flex-row justify-center items-center align-center
+                    lg:w-full lg:aspect-[1280/280]
+                ">
+                    <div class="w-[50%] h-full font-display font-semibold text-[48px] leading-[64px] text-right text-white pr-[56px]">
+                        29.12.1964
+                    </div>
+                    <div class="w-[6px] h-full bg-[#dddddd]/[86.67%] opacity-[86.67%] rounded-2xl"></div>
+                    <div class="w-[50%] h-full pl-[56px]">
+                        <h1 class="capitalize w-full font-display font-semibold text-[48px] leading-[64px] text-white mb-[24px]">Tinh hoa</h1>
+                        <p class="block w-full font-monsterrat text-[15px] leading-[24px] text-white/60">
+                            Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="
