done button link

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="./js/menu.responsive.js"></script>
+    <script src="./js/button.link.js"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/tailwind.config.js" type="module"></script>
@@ -338,10 +339,10 @@
         ">
             <img src="./img/logo.png" class="w-[9%]">
             <div class="flex flex-row h-fit mb-4">
-                <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer">Trang chủ</div>
-                <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer">Giới thiệu</div>
-                <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer">Lịch sử</div>
-                <div class="text-center font-monsterrat text-sm text-white px-8 cursor-pointer">Liên hệ</div>
+                <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer" data-button-link="/">Trang chủ</div>
+                <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer" data-button-link="/introduction.html">Giới thiệu</div>
+                <div class="text-center font-monsterrat text-sm text-white px-8 border-r-[1px] border-white/30 cursor-pointer" data-button-link="/introduction.html">Lịch sử</div>
+                <div class="text-center font-monsterrat text-sm text-white px-8 cursor-pointer" data-button-link="/contact.html">Liên hệ</div>
             </div>
             <div class="flex flex-row mb-2">
                 <span class="text-sm mr-4 font-monsterrat text-white/60">Điện thoại</span>
@@ -364,6 +365,7 @@
 
 <script>
     MenuResponsive.init();
+    ButtonLink.init();
 </script>
 
 </html>
